[gd_scene load_steps=13 format=2]

[ext_resource path="res://sprites/loot_spr_5.png" type="Texture" id=1]
[ext_resource path="res://sprites/loot_spr_2.png" type="Texture" id=2]
[ext_resource path="res://sprites/loot_spr_3.png" type="Texture" id=3]
[ext_resource path="res://sprites/loot_spr_1.png" type="Texture" id=4]
[ext_resource path="res://sprites/loot_spr_4.png" type="Texture" id=5]
[ext_resource path="res://sprites/idol_slot.png" type="Texture" id=6]
[ext_resource path="res://scenes/IdolSlot.gd" type="Script" id=7]
[ext_resource path="res://scenes/FireParticles.tscn" type="PackedScene" id=8]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=9]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": true,
"name": "full",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 9 )

[node name="IdolSlot" type="Area2D"]
script = ExtResource( 7 )

[node name="sprite_slot" type="AnimatedSprite" parent="."]
position = Vector2( 2, -16 )
frames = SubResource( 3 )

[node name="FireParticles" parent="." instance=ExtResource( 8 )]
visible = false
position = Vector2( -1, -32 )
scale = Vector2( 0.5, 0.5 )
z_index = 0
amount = 7

[node name="sprite_idol" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 1, -31 )
frames = SubResource( 1 )
animation = "full"
frame = 4
playing = true

[node name="lbl_perk" type="Label" parent="."]
margin_left = -29.0
margin_top = 5.0
margin_right = 32.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.152941, 0.756863, 0.654902, 1 )
custom_fonts/font = SubResource( 4 )
align = 1
